[project]
name = "run-vetting"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Achim Stoessl", email = "achim.stoessl@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "hermes-py>=0.2.0",
    "scipy>=1.14.1",
    "ipython>=8.27.0",
    "django>=5.1.1",
    "charmingbeauty>=0.1.4",
    "polars>=1.7.1",
    "jupyter>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/run_vetting"]
