[project]
name = "doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Achim Stoessl", email = "stoessl@hawaii.edu" }
]
dependencies = [
    "hermes-py>=0.2.0",
    "sphinx>=8.1.3",
    "pydata-sphinx-theme>=0.16.1",
    "charmingbeauty>=0.1.4",
    "django>=5.1.4",
    "myst-parser>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/doc"]
