[package]
name = "crusty_kraken" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["J.A. Stoessl <stoessl@hawaii.edu>"]


[dependencies]
zmq = "0.10.0"
# this is technically optional
# it is just used to integrate
# with the general cmake
cmake = "0.1.49"

