[package]
name        = "crusty-kraken" # the name of the package
version     = "0.2.0"    # the current version, obeying semver
authors     = ["J.A. Stoessl <stoessl@hawaii.edu>", "Jeff Zweerink <zweering@astro.ucla.edu>"]
description = "A programm for the GAPS science instrument. Read out the time-of-flight detectors and process their data."

#[[bin]]
#name  = 'crusty-kraken"
#test  = false
#bench = false

[features]
# diagnostics flag switch 
# on e.g. write waveforms to 
# hdf
diagnostics = []

[dependencies]
zmq = "0.10.0"
# this is technically optional
# it is just used to integrate
# with the general cmake
cmake = "0.1.49"

# used only for diagnostics
hdf5    = "0.8.1"
ndarray = "0.15"

# parse command line arguments
clap = { version = "4.0", features = ["derive"] }

# json de/serialization for config files
json = "0.12"

# logging
log = "0.4"
pretty_env_logger = "0.4"
