[workspace]
resolver = "2"
edition  = "2021"
members = [
  "liftof-lib",
  "liftof-rb",
  "liftof-cc", 
  "liftof-tui",  
]

[workspace.dependencies]

cfg-if           = "1.0"

# serialization
serde      = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

# thread and network communication
crossbeam-channel = "0.5"
zmq               = "0.10.0"
signal-hook       = "0.3"

# logging and command line parsing
log =   "0.4"
clap   = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features =["serde"] }

# own projects
tof-dataclasses       = { path = "../dataclasses/rust/tof-dataclasses" , features = ["database", "tofcontrol", "advanced-algorithms"], version = "0.10"}
rpy-tof-dataclasses   = { path = "../dataclasses/rust/pybindings", version = "0.10" }

[profile.release]
opt-level = 3

[workspace.metadata]
authors     = ["J.A. Stoessl <stoessl@hawaii.edu>", "Paolo Lazzaroni <paolo.lazzaroni@unibg.it>", "Jeff Zweerink <zweering@astro.ucla.edu>", "G. Tytus <gtytus@hawaii.edu>"]
description = "The liftof suite comprises programs and tools to control the GAPS TOF system and acquire data"
