[package]
name = "rb-soft"
version = "0.2.0"
edition = "2021"


#[[bin]]
#name = "watch-buffer-fill"
#path = "src/bin/watch_buffer_fill.rs"

[[bin]]
name = "rb-soft"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"

tof-dataclasses = { path = "../dataclasses/rust/tof-dataclasses" , features = ["random"]} 

zmq = "0.10.0"

log = "0.4"
pretty_env_logger = "0.4"

local-ip-address = "0.5"
clap = { version = "4.0", features = ["derive"] }

# this is just for fun
indicatif = "0.17"

#[target.armv7-unknown-linux-gnueabi]
#linker = "/usr/bin/arm-none-eabi-gcc"
