[package]
name = "liftof-analysis"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "liftof-analysis"
path = "src/main.rs"

[[bin]]
name = "liftof-robin-reader"
path = "src/bin/robin_reader.rs"

[dependencies]
liftof-lib = { path = "../liftof-lib"} 
tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["random", "database"]} 

textplots = "0.8"
glob = "0.3"
regex = "1.9"
log = "0.4"
pretty_env_logger = "0.4"

clap = { version = "4.0", features = ["derive"] }

# this is just for fun
indicatif = "0.17"

json = "0.12"

#[target.armv7-unknown-linux-gnueabi]
#linker = "/usr/bin/arm-none-eabi-gcc"
