[package]
name = "liftof-analysis"
version = "0.10.0"
edition = "2021"


[dependencies]
clap            = { workspace = true }
log             = { workspace = true }
 
liftof-lib      = { path = "../liftof-lib"} 
tof-dataclasses = { workspace = true } 
glob            = "0.3"
indicatif       = "0.17"
printpdf        = {version = "0.5", features=["embedded_images"]}
plotters        = "0.3"
#rand = "0.8"
ndhistogram     = "0.9"
rusttype        = "0.9"

#image = "0.25"
#textplots = "0.8"
#glob = "0.3"
#regex = "1.9"
#log = "0.4"
#pretty_env_logger = "0.4"
#env_logger = "0.10"


