[package]
name        = "liftof-cc" # the name of the package
version     = "0.9.0"    # the current version, obeying semver
authors     = ["J.A. Stoessl <stoessl@hawaii.edu>", "Paolo Lazzaroni <paolo.lazzaroni@unibg.it>", "Jeff Zweerink <zweering@astro.ucla.edu>"]
description = "A programm for the GAPS science instrument. Read out the time-of-flight detectors and process their data."

[[bin]]
name  = "liftof-cc"
#test  = false
#bench = false

[[bin]]
name = "liftof-mt"
path = "src/bin/liftof_mt.rs"

[dependencies]

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["random","database","tofcontrol","smoothed_z_score"], version = "0.9"} 
liftof-lib      = { path = "../liftof-lib" , features = ["random"], version="0.9"}
tof-control     = {path = "../../extern/tof-control", optional = false, version = "0.3", features=[] }

zmq = "0.10.0"

# parse command line arguments
clap = { version = "4.0", features = ["derive"] }

# json de/serialization for config files
json = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

local-ip-address = "0.5"

# msmc channels
crossbeam-channel = "0.5"

# catch CTRL+C
ctrlc = "3.2"

# logging
log = "0.4"
colored = "2.0"
env_logger = "0.10"
