[package]
name        = "liftof-cc" # the name of the package
version     = "0.10.2"    # the current version, obeying semver
authors     = ["J.A. Stoessl <stoessl@hawaii.edu>", "Paolo Lazzaroni <paolo.lazzaroni@unibg.it>", "Jeff Zweerink <zweering@astro.ucla.edu>"]
description = "A programm for the GAPS science instrument. Read out the time-of-flight detectors and process their data."

[[bin]]
name  = "liftof-cc"
#test  = false
#bench = false

[[bin]]
name = "liftof-mt"
path = "src/bin/liftof_mt.rs"

[dependencies]

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["database","tofcontrol","smoothed_z_score"], version = "0.10"} 
liftof-lib      = { path = "../liftof-lib" , version="0.10"}
tof-control     = {path = "../../extern/tof-control", optional = false, version = "0.5", features=[] }

zmq = "0.10.0"
indicatif = "0.17"
# parse command line arguments
clap = { version = "4.0", features = ["derive"] }
# tof-control depends on comfy-table as well
comfy-table = { version = "7.1", default-features = false }


serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml       = "0.8"

# msmc channels
crossbeam-channel = "0.5"

# catch SIGTERM, SIGINT
# (systemd integration)
signal-hook = "0.3"

# logging
log = "0.4"
colored = "2.0"
env_logger = "0.10"

#[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
## Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
#pre-build = [
#    "dpkg --add-architecture $CROSS_DEB_ARCH", 
#    "apt-get update && apt-get --assume-yes install libsqlite3-dev:$CROSS_DEB_ARCH"
#]

