[package]
name        = "liftof-cc" # the name of the package
version     = "0.10.2"    # the current version, obeying semver
authors     = ["J.A. Stoessl <stoessl@hawaii.edu>", "Paolo Lazzaroni <paolo.lazzaroni@unibg.it>", "Jeff Zweerink <zweering@astro.ucla.edu>"]
description = "A programm for the GAPS science instrument. Read out the time-of-flight detectors and process their data."

[[bin]]
name  = "liftof-cc"
#test  = false
#bench = false

[[bin]]
name = "liftof-mt"
path = "src/bin/liftof_mt.rs"

[dependencies]


clap              = { workspace = true }  
zmq               = { workspace = true }  
serde             = { workspace = true }  
serde_json        = { workspace = true }  
crossbeam-channel = { workspace = true }  
log               = { workspace = true }  

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["database","tofcontrol","smoothed_z_score"], version = "0.10"} 
liftof-lib      = { path = "../liftof-lib" , version="0.10"}
tof-control     = {path = "../../extern/tof-control", optional = false, version = "0.5", features=[] }

indicatif = "0.17"
# tof-control depends on comfy-table as well
comfy-table = { version = "7.1", default-features = false }


toml       = "0.8"


# catch SIGTERM, SIGINT
# (systemd integration)
signal-hook = "0.3"

colored = "2.0"
env_logger = "0.10"

#[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
## Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
#pre-build = [
#    "dpkg --add-architecture $CROSS_DEB_ARCH", 
#    "apt-get update && apt-get --assume-yes install libsqlite3-dev:$CROSS_DEB_ARCH"
#]

