[package]
name = "liftof-lib"
version = "0.10.1"
edition = "2021"
rust-version = "1.78"

[features]
random     = []
debug      = []
database   = ["tof-dataclasses/database"]
tofcontrol = ["tof-dataclasses/tofcontrol"]


[dependencies]

serde             = { workspace = true } 
serde_json        = { workspace = true } 
crossbeam-channel = { workspace = true } 
zmq               = { workspace = true }
log               = { workspace = true }
signal-hook       = { workspace = true }
# parse command line arguments
clap              = { workspace = true }

half              = "2.4"
#ssh2              = "0.9"
toml              = "0.8"

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["smoothed_z_score"], version = "0.10"} 


colored     = "2.0"
env_logger  = "0.10"

ureq        = "2.1"
indicatif   = "0.17"
#cfg-if      = "1.0" # TODO - have a propper debugging feature

#[target.armv7-unknown-linux-gnueabi]
#linker = "/usr/bin/arm-none-eabi-gcc"

