[package]
name = "liftof-lib"
version = "0.10.4"
edition = "2021"
rust-version = "1.78"

[features]
random     = ["tof-dataclasses/random"]
debug      = []
database   = ["tof-dataclasses/database"]
tofcontrol = ["tof-dataclasses/tofcontrol"]
discord    = ["discord-rs"]

[dependencies]

serde             = { workspace = true } 
serde_json        = { workspace = true } 
crossbeam-channel = { workspace = true } 
zmq               = { workspace = true }
log               = { workspace = true }
signal-hook       = { workspace = true }
# parse command line arguments
clap              = { workspace = true }
chrono            = { workspace = true }
discord-rs        = { optional  = true, version = "0.1" }
half              = "2.4"
toml              = "0.8"

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["smoothed_z_score"], version = "0.10"} 

colored     = "2.0"
env_logger  = "0.10"

ureq        = "2.12"
indicatif   = "0.17"

ndarray = "0.15"
ndarray-rand = "0.13"
ndarray-linalg = "0.15"
rustfft = "6.2"
statrs = "0.16"
nalgebra = "0.33"
argmin = "0.3.1"

