[package]
name = "liftof-python"
version = "0.10.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rust_dataclasses"
path = "src/lib.rs"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
tof-dataclasses     = { workspace = true, features = ["polars"] } 
liftof-lib          = { path = "../liftof-lib", features=["database"]}
rpy-tof-dataclasses = { workspace = true }

# somehow pyo3 is very picky with the version
pyo3            = { version = "0.21", features = ["extension-module"] }
pyo3-log        = "0.10"
#pyo3            = { version = "0.19.2", features = ["extension-module"] }
#pyo3-log        = "0.8"
pyo3-polars     = "0.13"
#numpy           = "0.19"
numpy           = "0.21"
comfy-table     = "7.1"
