[package]
name = "liftof-rb"
version = "0.10.4"
edition = "2021"
description = "Readoutboard data acquisition code for the TOF of the GAPS science experiment"

[[bin]]
name = "liftof-rb"
path = "src/main.rs"

[[bin]]
name = "watch-buffer-fill"
path = "src/bin/watch_buffer_fill.rs"

[[bin]]
name = "scan-uio-buffers"
path = "src/bin/scan_uio_buffers.rs"

[[bin]]
name = "debug-idle"
path = "src/bin/debug_idle.rs"

[[bin]]
name = "debug-registers"
path = "src/bin/debug_registers.rs"

[features]
database = ["tof-dataclasses/database", "liftof-lib/database"]

[dependencies]
# addess raw memeory, e.g. /dev/uio0
memmap = "0.7"

crossbeam-channel = { workspace = true } 
log               = { workspace = true } 
clap              = { workspace = true } 
serde_json        = { workspace = true } 
zmq               = { workspace = true }
cfg-if            = { workspace = true }

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["tofcontrol","smoothed_z_score"], version = "0.10"} 
liftof-lib      = { path = "../liftof-lib", version="0.10"} 
tof-control     = { path = "../../extern/tof-control", optional = false, version = "0.9", features=[] }

colored = "2.0"
env_logger = "0.10"

indicatif = ">=0.17.3"
signal-hook = "0.3"

#[target.armv7-unknown-linux-gnueabi]
#linker = "/usr/bin/arm-none-eabi-gcc"
