[package]
name = "liftof-tui"
version = "0.10.2"
edition = "2021"

[features]
telemetry  = ["telemetry-dataclasses"]
default    = ["telemetry"]

[dependencies]

cfg-if     = { workspace = true }

zmq        = { workspace = true } 
log        = { workspace = true }
clap       = { workspace = true } 
serde      = { workspace = true }
serde_json = { workspace = true } 
crossbeam-channel = { workspace = true }

chrono     = { version = "0.4", features = ["serde"] }

# tui stuff
# FIXME - ratatui is now at 0.27, but there are issues with 
# tui-logger. Check back again in the future.
tui-logger = { version = "0.11" } 
ratatui    = { version = "=0.26.3", features = ["all-widgets"]}
tui-popup  = "=0.3.2"
crossterm  = { version = "0.23", features=["serde"]}


tof-dataclasses = { workspace = true }
liftof-lib      = { path = "../liftof-lib" , features = ["random"], version = "0.10"}
telemetry-dataclasses = { path = "../../../telemetry/dataclasses/rust/telemetry-dataclasses", optional = true }

# this is the "one and only" histogram 
# crate in my opinion
ndhistogram = "0.9.0"

#num-traits = "0.2"

