[package]
name = "liftof-tui"
version = "0.10.4"
edition = "2021"

[features]
telemetry  = ["telemetry-dataclasses"]
default    = ["telemetry"]

[dependencies]
cfg-if     = { workspace = true }
zmq        = { workspace = true } 
log        = { workspace = true }
clap       = { workspace = true } 
serde      = { workspace = true }
serde_json = { workspace = true } 
crossbeam-channel = { workspace = true }
chrono     = { version = "0.4", features = ["serde"] }

# tui stuff
ratatui    = { version = "0.27", features = ["all-widgets"]}
tui-popup  = "0.4"
tui-logger = "0.11"

crossterm  = { version = "0.23", features=["serde"]}

tof-dataclasses = { path = "../../dataclasses/rust/tof-dataclasses" , features = ["database","smoothed_z_score"], version = "0.10"} 

#tof-dataclasses = { workspace = true }
liftof-lib      = { path = "../liftof-lib" , features = ["random"], version = "0.10"}
telemetry-dataclasses = { path = "../../../telemetry/dataclasses/rust/telemetry-dataclasses", optional = true }

# this is the "one and only" histogram 
# crate in my opinion
ndhistogram = "0.9.0"

#num-traits = "0.2"

