[package]
name = "gaps-telemetry-python"
version = "0.10.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rust_telemetry"
path = "src/lib.rs"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
telemetry-dataclasses = { path = "../telemetry-dataclasses", features=["pybindings"]}
tof-dataclasses       = { path = "../../../../tof/dataclasses/rust/tof-dataclasses/" , features = ["advanced-algorithms", "database"]} 
rpy-tof-dataclasses   = { path = "../../../../tof/dataclasses/rust/pybindings/" }
#liftof-lib = { path = "../liftof-lib" }
# latest version is 0.22 
pyo3                  = { version = "0.21", features = ["extension-module"] }
pyo3-log              = "0.10"
numpy                 = "0.21"

