[package]
name = "telemetry-dataclasses"
version = "0.10.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[[test]]
name = "test"
required-features = ["random"]

[features]
random=["rand"]
pybindings=["pyo3"]
caraspace-serial=["caraspace"]
#database=["sqlite"]

[dev-dependencies]
# for testing
# used for the random number generation
#rand = "0.8"
criterion = "0.4"

[dependencies]

# logging
log             = "0.4"
tof-dataclasses = {version = "0.10", path = "../../../../tof/dataclasses/rust/tof-dataclasses/", features=["database"]}
caraspace = {version = "0.10", path = "../../../../caraspace", optional = true }
regex           = "1.5"
rand            = {version = "0.8", optional = true}
serde           = {version = "1.0", features=["derive"]}
serde_json      = "1.0"
pyo3            = { version = "0.23", features = ["extension-module"], optional = true }
