[package]
name = "rpy-tof-dataclasses"
version = "0.10.0"
edition = "2021"
rust-version = "1.77" # require something fairly new
                      # use rustup update to update 
                      # rust toolchain

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rpy_tof_dataclasses"
path = "src/lib.rs"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
tof-dataclasses = { path = "../tof-dataclasses", features = ["polars", "database", "advanced-algorithms","pybindings"] } 
# somehow pyo3 is very picky with the version
pyo3            = { version = "0.21", features = ["extension-module"] }
pyo3-log        = "0.10"
pyo3-polars     = "0.13"
numpy           = "0.21"
comfy-table     = "7.1"
