[project]
name = "install"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Achim Stoessl", email = "achim.stoessl@gmail.com" }
]
dependencies = [
    "ipython>=8.24.0",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "polars>=0.20.28",
    "charmingbeauty>=0.1.4",
    "pydashi>=0.1.3",
    "scipy>=1.13.0",
    "tqdm>=4.66.4",
    "django>=5.0.6",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/install"]
